# frac-modeling-copia

./: .gitignore  README.md  example_data.py  geometry.py  init_db.py  main.py  math_adim.py  math_dev.py  math_dualporosity.py  math_laplace.py  math_multifracture.py  math_skin.py  physics.py  plot_results.py  pyproject.toml  requirements.txt  ui_inputs.py  visualize_results.py  visualize_results_curve.py
app/: database.py  main.py  models.py  schemas.py  solver.py
app/api/v1/: projects.py  simulation.py
app/core/: config.py
app/db/: session.py
app/engine/: adimensional.py  dual_porosity.py  matrix_assembly.py  physics_utils.py
app/models/: well_models.py
app/routes/: project.py  simulation.py
app/schemas/: sim_schemas.py  well_schemas.py
app/services/: sim_service.py
app/visualize/: visualize_example1.py  visualize_multiwell.py  visualize_results_presion_interferencia.py  visualize_verification_loglog.py
